argo/nextcloud-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud # Namespace hinzufügen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-storage
              mountPath: /var/www/html # Standard-Nextcloud-Verzeichnis für Daten
      volumes:
        - name: nextcloud-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: nextcloud # Namespace hinzufügen
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort # Falls du externen Zugriff möchtest, ansonsten kannst du NodePort oder ClusterIP verwenden
